<resources>
    <string name="__picker_all_image">所有图片</string>
    <string name="__picker_cancel">取消</string>
    <string name="__picker_check">选择</string>
    <string name="__picker_confirm_to_delete">确认删除？</string>
    <string name="__picker_delete">删除</string>
    <string name="__picker_deleted_a_photo">删除了一张图片</string>
    <string name="__picker_done">完成</string>
    <string name="__picker_done_with_count">完成(%1$d/%2$d)</string>
    <string name="__picker_edit">编辑</string>
    <string name="__picker_image_count">%1$d张</string>
    <string name="__picker_image_index">%1$d/%2$d</string>
    <string name="__picker_no_photo">还没有选择图片</string>
    <string name="__picker_over_max_count_tips">你最多可以选择%1$d张图片</string>
    <string name="__picker_preview">预览</string>
    <string name="__picker_title">图片选择</string>
    <string name="__picker_undo">撤消</string>
    <string name="__picker_yes">确定</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accs_permission_description">阿里云通道服务广播权限，用于防止外部应用接收广播消息</string>
    <string name="accs_permission_label">阿里云通道服务</string>
    <string name="action_settings">Settings</string>
    <string name="agoo_permission_description">阿里云推送服务权限，用于防止外部应用接收广播消息</string>
    <string name="agoo_permission_label">阿里云推送服务</string>
    <string name="alert_confirm_goto_setup">去设置</string>
    <string name="alert_content_notification_msg">尊敬的用户，我们的应用程序需要通知权限以便您能够及时收到重要消息。请在设置中开启通知以确保不会错过任何重要信息。谢谢！</string>
    <string name="alert_pay_success_last_sign_electron_contract">支付成功,最后一步签署租房电子合同</string>
    <string name="alert_tip_finish_exit_rent">请确认退款金额，退款账号，开户行是否正确?</string>
    <string name="alert_title_apply_logout_account">确定要申请注销微棠账号吗？</string>
    <string name="alert_title_enable_notification">开启通知</string>
    <string name="aliyun_accs_channel_process">:channel</string>
    <string name="aliyun_accs_target_process" />
    <string name="ams_accountId">123495</string>
    <string name="ams_appKey">27566645</string>
    <string name="ams_appSecret">7e9e9ef702a8eb8ae14049e539de1f13</string>
    <string name="ams_hotfix_idSecret">27566645-1</string>
    <string name="ams_hotfix_rsaSecret">MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQDPM1OL5F8jzEftneEcTXr1D34Fz0Q3NJuNURW3Njtyt4O7oIlY98yz1fnPowCp73glSPxqvdCxAHtLEhjEGEQuxDUv+2Idgk7mlwQMTaAPwuZjr7N4EhkHhWPz06vIecALeWFFlO4E4rl+2aCTZCyiub2FgBwoZZh51Rc0LFT9a4nqah9Oy2g26mq57ExjqKL8U8Wle7oHQbr1Z+SCp/RQhjxaXfdnhRRh1if9ZDRV+H6/ffSe0vAw3Lg0tvcbkwSmPGXubOBCxAnnhVsBP5oH/1EGQ7XLfnYroqTJECYTzgboApcKkwFAK7QHXtSvTj4HPmdFU9EQx2ImpnTB2oHRAgMBAAECggEAIoPVRfdb1dXAoZdsGU/azJmxD3ywS1XrF4ZLTMKu8nQZcJbUakqVAdwCChGIGca3R9a5nXpTGjkPULkKARhdu0CZ7407kdjUFdtQJFCF+jooMLDi/3xcSQFyXfqDohiN4httFa8yWwP9jGDqO8MzIEQ6itOFXUFXPew+OkWsPq5vfFZEQxsPskWxlkEMgOkjHY52J7mFeMXPivOOMOGYorhgCFAGusheK8A3WsjGIXxXcNT9UlXCb3P0vMpWIDd2mshCK6LTIZkFyOx9KK6+PHCQWpEWh2DHnMSApZc54DUXvHYmgQWNM3fz3IbzInBC4WjOXWK+VJI3mrqDtRWOAQKBgQDt+rtvNW+di70nnPoDPD6hEqhFUM/hvEmYMp7u5JgS2TgRUpoiWmx6ysijEHqnLrCGQQPUAQ2BuXjHH2rM/0zvKHo/XE+8A9ozh+/XWsGZd1Pn8u3PiPA+D170IUTMgC5vgRJG5DyQy5Guc4NVTz8acchnsL2JdWpDXfmqlsl4IQKBgQDe4/CdQp9U04ZHx+EsVdRT4GTOq/Vg4Vhpp6DDbMacokPPI28njTMHYOwB13/vos2KrNm0Y3My7DUbuHtk4sLpJGUafySmo7JMs58IaxizmVnDeI6xOrdToKKUxYgP1zrCWVEvOO6TUxym8mkwOTebC02Hj370NmZs92JHqCQTsQKBgBLgBinF5TprsO8JZlMHXjhMUIhe5n4S/wtRSIXOH7mu/OFy2cLLxTrgBpXYYsIL0/hyA6m3A6k8WrYAaeokfaeiYD/SRIi3DYF00LMWAbD4Y/FLtUz2oYdqlK9sTBakPAqgBCEXTS521vEtPEdx56FjUO/YdtAGPg1l0L2VBBnBAoGBAIat1MYxa3UmGw1kiXrwocvM2xzGaw6PG4077LgpEhmzMqYHEzMi7qKWvgSe4n86MFiK+UE2lnU+pRiK8ISVQJD/nNfV25+VajdOkdnUXKipEMQ8JHySrhOqDJM4iG6J7sdgkN2n2QDMR5PZBhZNfHwC6GXxHxURifJtyMTjpGkBAoGACXFDIIJkhhE6g/VD3YXWn3bQWMG05Sj3Y/iOnCywTfxaInLSfsnwnvi3gKABTGfqar3PjwEc3FzvOLbFFQlRRlT3tqpHslPEyEi/8IJ/td6bpFcUNN7bkXQSBFm88esx04jCSJzhvUqPJI2MF4cpTIIHXn75qsrXYNkmK1GuKCo=</string>
    <string name="ams_httpdns_secretKey">d5e8d6f78f7720b64095bf1936382705</string>
    <string name="ams_packageName">com.chinavisionary.microtang</string>
    <string name="app_name">微棠</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="big_tip_msg">温馨提示</string>
    <string name="ble_title_connect_failed_close_ble">连接失败！请关闭蓝牙重试</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="camera_error">拍照失败！</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="copy_electron_contract_download">拷贝下载地址</string>
    <string name="core_lib_discount_unit">%s折</string>
    <string name="core_lib_hint_input_content">请输入内容</string>
    <string name="core_lib_rmb_china_unit">元</string>
    <string name="core_lib_rmb_unit">￥</string>
    <string name="core_lib_tip_confirm_del_img">确定要删除图片吗?</string>
    <string name="core_lib_tip_input_empty">提交的内容不能为空</string>
    <string name="core_lib_tip_no_page">您访问的接口不存在,服务器异常</string>
    <string name="core_lib_tip_pay_channel_is_empty">请选择支付方式</string>
    <string name="core_lib_tip_request_param_is_empty">请求参数为空</string>
    <string name="core_lib_title_alert_tip">提示</string>
    <string name="core_lib_title_baidu_map">百度地图</string>
    <string name="core_lib_title_cancel">取消</string>
    <string name="core_lib_title_close">关</string>
    <string name="core_lib_title_confirm">确定</string>
    <string name="core_lib_title_gaode_map">高德地图</string>
    <string name="core_lib_title_open">开</string>
    <string name="core_lib_title_upload_file_list_is_empty">上传的文件列表为空</string>
    <string name="crop_fail">裁剪失败</string>
    <string name="data_error">服务器返回数据为空</string>
    <string name="dateview_day">日</string>
    <string name="dateview_hour">时</string>
    <string name="dateview_minutes">分</string>
    <string name="dateview_month">月</string>
    <string name="dateview_month_date">%1$S月%2$S日</string>
    <string name="dateview_year">年</string>
    <string name="deal_pic">正在保存图片 . . .</string>
    <string name="default_app_update_tip">App升级啦,快点点击更新吧</string>
    <string name="define_roundedimageview" />
    <string name="edit_banner_add_title">添加banner</string>
    <string name="edit_banner_del_title">删除banner</string>
    <string name="edit_banner_is_not_del">目前只有一个item不能删除</string>
    <string name="edit_banner_tip_activity_is_empty">不能开启编辑模式,请设置activity</string>
    <string name="empty_view_hint">暂无数据</string>
    <string name="error_view_hint">加载失败</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hint_activity_comment">您对这个活动满意吗？有任何建议欢迎和我们</string>
    <string name="hint_cancel_account_reason">请填写注销原因</string>
    <string name="hint_comment_content">您的宝贵意见，将是我们改进的方向！</string>
    <string name="hint_input_contact_address">请输入联系地址</string>
    <string name="hint_input_phone">请输入您的手机号</string>
    <string name="hint_input_rent_id_card">请输入身份证号码</string>
    <string name="hint_input_rent_name">请输入姓名</string>
    <string name="hint_input_rent_phone_no">请输入手机号</string>
    <string name="hint_input_sms_code">请输入您的验证码</string>
    <string name="placeholder_rmb_china_unit">%s元</string>
    <string name="title_auth">立即认证</string>
    <string name="title_auth_sign_quick">认证后签约更快捷哦</string>
    <string name="title_card_type">证件类型</string>
    <string name="title_contact_address">联系地址</string>
    <string name="title_count_fee">合计</string>
    <string name="title_current_run_eve">当前环境:</string>
    <string name="title_deposit_info">押金会在退租后一个月内退回您的账户</string>
    <string name="title_deposit_price">押金</string>
    <string name="title_hi">您好,</string>
    <string name="title_i_know">我知道了</string>
    <string name="title_id_card">身份证</string>
    <string name="title_id_card_no">身份证号码</string>
    <string name="title_manger_fee">服务费</string>
    <string name="title_manger_fee_info">服务费属不可退回费用</string>
    <string name="title_micro_tang_private_policy">《隐私政策》</string>
    <string name="title_micro_tang_user_agree">《用户协议》</string>
    <string name="title_not_auth">暂不认证</string>
    <string name="title_now_login">立即登录</string>
    <string name="title_pay_info">支付说明</string>
    <string name="title_phone_no">手机号</string>
    <string name="title_pwd_login">密码登录</string>
    <string name="title_read_and_agree">我已阅读并同意</string>
    <string name="title_register">注册</string>
    <string name="title_rent_count">房租总计</string>
    <string name="title_rent_user_info">租客信息</string>
    <string name="title_send_sms_code">发送验证码</string>
    <string name="title_show">显示</string>
    <string name="title_un_auth_alert">您还未认证</string>
    <string name="title_update_phone">修改手机号</string>
    <string name="title_user_name">姓名</string>
    <string name="title_welcome">欢迎来到微棠,立即</string>
</resources>