<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_white"
    android:paddingBottom="@dimen/dp_5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:gravity="center_vertical"
        android:id="@+id/tv_title"
        android:layout_height="@dimen/dp_51"
        android:text="@string/title_rent_user_info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/RoomDetailsMainTitleTvStyle"/>
    <View
        android:id="@+id/view_title_line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        style="@style/HorizontalLineStyle"/>
    <TextView
        android:textSize="@dimen/sp_15"
        android:textColor="@color/color000000"
        android:gravity="center_vertical"
        android:id="@+id/tv_left_title"
        android:paddingLeft="@dimen/dp_14"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_38"
        android:text="@string/title_user_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_title_line"/>
    <EditText
        android:id="@+id/edt_user_info"
        android:layout_marginRight="@dimen/dp_12"
        android:hint="@string/hint_input_rent_name"
        android:inputType="text"
        app:layout_constraintRight_toLeftOf="@+id/img_right_icon"
        app:layout_constraintTop_toTopOf="@+id/tv_left_title"
        style="@style/SignRoomEdtStyle"/>
    <ImageView
        android:id="@+id/img_right_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_14"
        android:src="@mipmap/ic_right_direction"
        app:layout_constraintBottom_toBottomOf="@+id/tv_left_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_left_title"/>
    <TextView
        android:textSize="@dimen/sp_15"
        android:textColor="@color/color000000"
        android:gravity="center_vertical"
        android:id="@+id/tv_phone_title"
        android:paddingLeft="@dimen/dp_14"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_38"
        android:text="@string/title_phone_no"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_user_info"/>
    <ImageView
        android:id="@+id/img_right_phone_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_14"
        android:src="@mipmap/ic_right_direction"
        app:layout_constraintBottom_toBottomOf="@+id/tv_phone_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_phone_title"/>
    <EditText
        android:id="@+id/edt_phone"
        android:layout_marginRight="@dimen/dp_12"
        android:hint="@string/hint_input_rent_phone_no"
        android:maxLength="11"
        android:inputType="phone"
        app:layout_constraintRight_toLeftOf="@+id/img_right_phone_icon"
        app:layout_constraintTop_toTopOf="@+id/tv_phone_title"
        style="@style/SignRoomEdtStyle"/>
    <TextView
        android:id="@+id/tv_id_card_title"
        android:text="@string/title_id_card_no"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone_title"
        style="@style/SignRoomTitleStyle"/>
    <ImageView
        android:id="@+id/img_right_id_icon"
        app:layout_constraintBottom_toBottomOf="@+id/tv_id_card_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_id_card_title"
        style="@style/SignRoomIconStyle"/>
    <EditText
        android:id="@+id/edt_id_card"
        android:hint="@string/hint_input_rent_id_card"
        android:maxLength="24"
        android:inputType="number"
        app:layout_constraintRight_toLeftOf="@+id/img_right_id_icon"
        app:layout_constraintTop_toTopOf="@+id/tv_id_card_title"
        style="@style/SignRoomEdtStyle"/>
    <TextView
        android:id="@+id/tv_id_card_type_title"
        android:text="@string/title_card_type"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_id_card_title"
        style="@style/SignRoomTitleStyle"/>
    <ImageView
        android:id="@+id/img_right_id_type_icon"
        app:layout_constraintBottom_toBottomOf="@+id/tv_id_card_type_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_id_card_type_title"
        style="@style/SignRoomIconStyle"/>
    <TextView
        android:textColor="@color/colore757575"
        android:id="@+id/tv_right_value"
        android:layout_marginRight="@dimen/dp_14"
        android:text="@string/title_id_card"
        app:layout_constraintRight_toLeftOf="@+id/img_right_id_type_icon"
        app:layout_constraintTop_toTopOf="@+id/tv_id_card_type_title"
        style="@style/SignRoomTitleStyle"/>
    <TextView
        android:id="@+id/tv_address_title"
        android:text="@string/title_contact_address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_id_card_type_title"
        style="@style/SignRoomTitleStyle"/>
    <ImageView
        android:id="@+id/img_right_address_icon"
        app:layout_constraintBottom_toBottomOf="@+id/tv_address_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_address_title"
        style="@style/SignRoomIconStyle"/>
    <EditText
        android:textSize="@dimen/sp_12"
        android:id="@+id/edt_address"
        android:layout_width="@dimen/dp_220"
        android:hint="@string/hint_input_contact_address"
        android:maxLines="2"
        android:inputType="text"
        app:layout_constraintRight_toLeftOf="@+id/img_right_address_icon"
        app:layout_constraintTop_toTopOf="@+id/tv_address_title"
        style="@style/SignRoomEdtStyle"/>
</androidx.constraintlayout.widget.ConstraintLayout>
