<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="@dimen/sp_18"
        android:textColor="@color/color000000"
        android:gravity="center"
        android:id="@+id/tv_pay_info_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_19"
        android:layout_marginTop="@dimen/dp_21"
        android:text="@string/title_pay_info"
        android:includeFontPadding="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tv_pay_info_count_title"
        android:text="@string/title_rent_count"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pay_info_title"
        style="@style/AlertPayInfoTitleStyle"/>
    <TextView
        android:id="@+id/tv_pay_info_count_value"
        android:text="1999元"
        app:layout_constraintBottom_toBottomOf="@+id/tv_pay_info_count_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_pay_info_count_title"
        style="@style/AlertPayInfoValueStyle"/>
    <TextView
        android:id="@+id/tv_pay_info_deposit_title"
        android:text="@string/title_deposit_price"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pay_info_count_title"
        style="@style/AlertPayInfoTitleStyle"/>
    <TextView
        android:id="@+id/tv_pay_info_despite_value"
        android:text="1999元"
        app:layout_constraintBottom_toBottomOf="@+id/tv_pay_info_deposit_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_pay_info_deposit_title"
        style="@style/AlertPayInfoValueStyle"/>
    <TextView
        android:id="@+id/tv_pay_info_manger_fee_title"
        android:text="@string/title_manger_fee"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pay_info_deposit_title"
        style="@style/AlertPayInfoTitleStyle"/>
    <TextView
        android:id="@+id/tv_pay_info_manger_fee_value"
        android:text="@string/placeholder_rmb_china_unit"
        app:layout_constraintBottom_toBottomOf="@+id/tv_pay_info_manger_fee_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_pay_info_manger_fee_title"
        style="@style/AlertPayInfoValueStyle"/>
    <TextView
        android:id="@+id/tv_pay_info_count_fee_title"
        android:text="@string/title_count_fee"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pay_info_manger_fee_title"
        style="@style/AlertPayInfoTitleStyle"/>
    <TextView
        android:id="@+id/tv_pay_info_count_fee_value"
        android:text="1999元"
        app:layout_constraintBottom_toBottomOf="@+id/tv_pay_info_count_fee_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_pay_info_count_fee_title"
        style="@style/AlertPayInfoValueStyle"/>
    <RelativeLayout
        android:id="@+id/rlayout_tip_msg"
        android:background="@drawable/bg_question_msg"
        android:padding="@dimen/dp_12"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_30"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pay_info_count_fee_title">
        <TextView
            android:id="@+id/tv_star_title"
            style="@style/AlertPayInfoStarStyle"/>
        <TextView
            android:id="@+id/tv_deposit_info"
            android:text="@string/title_deposit_info"
            android:layout_toRightOf="@+id/tv_star_title"
            style="@style/AlertPayInfoTipStyle"/>
        <TextView
            android:id="@+id/tv_star_b_title"
            android:layout_marginTop="@dimen/dp_6"
            android:layout_below="@+id/tv_star_title"
            style="@style/AlertPayInfoStarStyle"/>
        <TextView
            android:id="@+id/tv_manger_fee_info"
            android:layout_marginTop="@dimen/dp_6"
            android:text="@string/title_manger_fee_info"
            android:layout_toRightOf="@+id/tv_star_b_title"
            android:layout_below="@+id/tv_star_title"
            style="@style/AlertPayInfoTipStyle"/>
    </RelativeLayout>
    <Button
        android:id="@+id/btn_alert_confirm"
        android:layout_marginTop="@dimen/sp_15"
        android:text="@string/title_i_know"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlayout_tip_msg"
        style="@style/AlertConfirmBtnStyle"/>
</androidx.constraintlayout.widget.ConstraintLayout>
