<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/title_layout"/>
    <TextView
        android:textSize="@dimen/sp_32"
        android:textColor="@color/colore757575"
        android:id="@+id/tv_tip_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_34"
        android:layout_marginTop="@dimen/dp_37"
        android:text="@string/title_hi"
        android:includeFontPadding="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"/>
    <TextView
        android:textSize="@dimen/sp_15"
        android:textColor="@color/color_title"
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_18"
        android:text="@string/title_welcome"
        android:includeFontPadding="false"
        app:layout_constraintLeft_toLeftOf="@+id/tv_tip_msg"
        app:layout_constraintTop_toBottomOf="@+id/tv_tip_msg"/>
    <TextView
        android:textSize="@dimen/sp_14"
        android:textColor="@color/tab_item_select_color"
        android:id="@+id/tv_register"
        android:layout_width="@dimen/dp_60"
        android:layout_height="wrap_content"
        android:text="@string/title_register"
        android:includeFontPadding="false"
        app:layout_constraintLeft_toRightOf="@+id/tv_welcome"
        app:layout_constraintTop_toTopOf="@+id/tv_welcome"/>
    <View
        android:id="@+id/view_register_mask"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_50"
        app:layout_constraintLeft_toRightOf="@+id/tv_welcome"
        app:layout_constraintTop_toBottomOf="@+id/tv_tip_msg"/>
    <EditText
        android:id="@+id/edt_phone"
        android:layout_marginTop="@dimen/dp_58"
        android:hint="@string/hint_input_phone"
        android:maxLength="11"
        android:inputType="phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
        style="@style/EdtLoginStyle"/>
    <EditText
        android:id="@+id/edt_pwd"
        android:layout_marginTop="@dimen/dp_20"
        android:hint="@string/hint_input_sms_code"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="@+id/tv_welcome"
        app:layout_constraintTop_toBottomOf="@+id/edt_phone"
        style="@style/EdtLoginStyle"/>
    <ImageView
        android:id="@+id/img_phone"
        android:layout_width="@dimen/dp_17"
        android:layout_height="@dimen/dp_25"
        android:src="@mipmap/ic_phone"
        app:layout_constraintBottom_toBottomOf="@+id/edt_phone"
        app:layout_constraintLeft_toLeftOf="@+id/edt_phone"
        app:layout_constraintTop_toTopOf="@+id/edt_phone"/>
    <ImageView
        android:id="@+id/img_pwd"
        android:layout_width="@dimen/dp_18"
        android:layout_height="@dimen/dp_21"
        android:src="@mipmap/ic_sms_code"
        app:layout_constraintBottom_toBottomOf="@+id/edt_pwd"
        app:layout_constraintLeft_toLeftOf="@+id/edt_pwd"
        app:layout_constraintTop_toTopOf="@+id/edt_pwd"/>
    <TextView
        android:id="@+id/tv_show_pwd"
        android:visibility="gone"
        android:text="@string/title_show"
        app:layout_constraintRight_toRightOf="@+id/edt_pwd"
        app:layout_constraintTop_toTopOf="@+id/edt_pwd"
        style="@style/LoginTipTvStyle"/>
    <Button
        android:id="@+id/btn_send_sms"
        android:text="@string/title_send_sms_code"
        app:layout_constraintBottom_toBottomOf="@+id/edt_phone"
        app:layout_constraintRight_toRightOf="@+id/edt_phone"
        app:layout_constraintTop_toTopOf="@+id/edt_phone"
        style="@style/LoginSendSmsBtnStyle"/>
    <TextView
        android:textSize="@dimen/sp_14"
        android:textColor="@color/colore757575"
        android:gravity="top|center_horizontal"
        android:id="@+id/tv_sms_login"
        android:paddingTop="@dimen/dp_16"
        android:paddingBottom="@dimen/dp_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_34"
        android:text="@string/title_pwd_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_pwd"/>
    <TextView
        android:textSize="@dimen/sp_14"
        android:textColor="@color/colore757575"
        android:gravity="top|center_horizontal"
        android:id="@+id/tv_update_phone"
        android:paddingTop="@dimen/dp_16"
        android:paddingBottom="@dimen/dp_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_34"
        android:text="@string/title_update_phone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_pwd"/>
    <CheckBox
        android:textSize="@dimen/sp_14"
        android:textColor="@color/color686868"
        android:gravity="center"
        android:id="@+id/cb_agree"
        android:background="@null"
        android:paddingLeft="@dimen/dp_6"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_28"
        android:layout_marginTop="@dimen/dp_10"
        android:checked="true"
        android:button="@drawable/bg_cb"
        android:text="@string/title_read_and_agree"
        app:layout_constraintLeft_toLeftOf="@+id/tv_sms_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"/>
    <TextView
        android:textSize="@dimen/sp_14"
        android:textColor="@color/tab_item_select_color"
        android:gravity="center"
        android:id="@+id/tv_protocol"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_28"
        android:text="@string/title_micro_tang_user_agree"
        app:layout_constraintBottom_toBottomOf="@+id/cb_agree"
        app:layout_constraintLeft_toRightOf="@+id/cb_agree"
        app:layout_constraintTop_toTopOf="@+id/cb_agree"/>
    <TextView
        android:textSize="@dimen/sp_14"
        android:textColor="@color/color686868"
        android:id="@+id/tv_and"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="和"
        app:layout_constraintBottom_toBottomOf="@+id/tv_protocol"
        app:layout_constraintLeft_toRightOf="@+id/tv_protocol"
        app:layout_constraintTop_toTopOf="@+id/tv_protocol"
        style="@style/TvStyle"/>
    <TextView
        android:textSize="@dimen/sp_14"
        android:textColor="@color/tab_item_select_color"
        android:gravity="center"
        android:id="@+id/tv_private_policy"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_28"
        android:text="@string/title_micro_tang_private_policy"
        app:layout_constraintBottom_toBottomOf="@+id/cb_agree"
        app:layout_constraintLeft_toRightOf="@+id/tv_and"
        app:layout_constraintTop_toTopOf="@+id/cb_agree"/>
    <Button
        android:id="@+id/btn_login"
        android:text="@string/title_now_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_pwd"
        style="@style/LoginLoginBtnStyle"/>
    <TextView
        android:gravity="center"
        android:id="@+id/tv_switch_eve"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/title_current_run_eve"
        app:layout_constraintLeft_toLeftOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/cb_agree"
        style="@style/TvStyle"/>
    <Spinner
        android:id="@+id/spinner_eve"
        android:visibility="gone"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_20"
        app:layout_constraintLeft_toRightOf="@+id/tv_switch_eve"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_switch_eve"/>
    <TextView
        android:textColor="@color/image_color_red"
        android:id="@+id/tv_switch_tip_msg"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="切换环境后需要杀掉APP重新打开才生效"
        app:layout_constraintLeft_toLeftOf="@+id/tv_switch_eve"
        app:layout_constraintTop_toBottomOf="@+id/tv_switch_eve"/>
</androidx.constraintlayout.widget.ConstraintLayout>
