<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_white"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_345">
    <ImageView
        android:id="@+id/img_exit_rent"
        android:layout_width="@dimen/dp_97"
        android:layout_height="@dimen/dp_100"
        android:layout_marginTop="@dimen/dp_26"
        android:src="@mipmap/ic_tip_auth"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:textSize="@dimen/dp_18"
        android:textColor="@color/color000000"
        android:gravity="center"
        android:id="@+id/tv_alert_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_19"
        android:layout_marginTop="@dimen/dp_26"
        android:text="@string/title_un_auth_alert"
        android:includeFontPadding="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_exit_rent"/>
    <TextView
        android:textSize="@dimen/dp_14"
        android:textColor="@color/colore757575"
        android:gravity="center"
        android:id="@+id/tv_alert_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_14"
        android:text="@string/title_auth_sign_quick"
        android:includeFontPadding="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_alert_title"/>
    <Button
        android:id="@+id/btn_alert_confirm"
        android:text="@string/title_auth"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_alert_content"
        style="@style/AlertConfirmBtnStyle"/>
    <Button
        android:id="@+id/btn_alert_cancel"
        android:text="@string/title_not_auth"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_alert_confirm"
        style="@style/AlertCancelBtnStyle"/>
</androidx.constraintlayout.widget.ConstraintLayout>
